[gd_scene load_steps=7 format=3 uid="uid://dbwmkc800fde5"]

[ext_resource type="Script" path="res://ui/victory_layer.gd" id="1_vfkj5"]
[ext_resource type="FontFile" uid="uid://bgadhgfi08g4m" path="res://Assets/TurretRoad/TurretRoad-Bold.ttf" id="2_b7tx5"]
[ext_resource type="Texture2D" uid="uid://b5rwqqeb36lst" path="res://Assets/star.png" id="2_tj1qh"]

[sub_resource type="Theme" id="Theme_6w6k6"]
default_font = ExtResource("2_b7tx5")

[sub_resource type="LabelSettings" id="LabelSettings_1bjc0"]
font_size = 72

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_y32yl"]

[node name="VictoryLayer" type="CanvasLayer"]
script = ExtResource("1_vfkj5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6w6k6")

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(420, 420)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
text = "Victory!"
label_settings = SubResource("LabelSettings_1bjc0")
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
material = SubResource("CanvasItemMaterial_y32yl")
use_parent_material = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3

[node name="StarsContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Start1" type="TextureRect" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer/StarsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_tj1qh")
expand_mode = 2
stretch_mode = 5

[node name="Start2" type="TextureRect" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer/StarsContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_tj1qh")
expand_mode = 2
stretch_mode = 5

[node name="Start3" type="TextureRect" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer/StarsContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_tj1qh")
expand_mode = 2
stretch_mode = 5

[node name="SurvivedLabel" type="Label" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Survived: +1"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Max Health: +1"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Money, money, money: +1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/PanelContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
